[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poetrist"
version = "0.1.0"
description = "a minimal flask blog"
authors = []
requires-python = ">=3.10.0"
dependencies = [
    "flask>=3.1.1",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "twine", 
    "maturin",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

