[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poetrist"
version = "0.1.0"
description = "a minimal flask blog"
authors = []
requires-python = ">=3.12.0"
dependencies = [
    "flask>=3.1.1",
    "html-sanitizer>=2.5.0",
    "markdown>=3.8.2",
    "pymdown-extensions>=10.16",
    "webauthn>=2.6.0",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

