[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poetrist"
version = "0.1.1"
description = "a tiny, single-file blog"
authors = []
requires-python = ">=3.13.0"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "latex2mathml>=3.78.0",
    "markdown>=3.8.2",
    "pymdown-extensions>=10.16",
    "requests>=2.32.4",
    "webauthn>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-flask",
    "pytest-cov",
    "coverage[toml]",
]
